src/objects/SP_Billing_Batches__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This will store the Billing Account “Billing Batches” assigned to each instance of SP</description>
    <fields>
        <fullName>INSTANCE_1_BATCHES__c</fullName>
        <label>INSTANCE_1_BATCHES</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INSTANCE_2_BATCHES__c</fullName>
        <label>INSTANCE_2_BATCHES</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INSTANCE_3_BATCHES__c</fullName>
        <label>INSTANCE_3_BATCHES</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SP Billing Batches</label>
</CustomObject>